# ai-arb-system

./: .env.example  .gitignore  CONTRIBUTING.md  FASTAPI_DESIGN_SPEC.md  LICENSE  PR_PARSER_INTEGRATION.md  PR_SECURITY_AGENT_SCHEMA.md  PR_SUMMARY_SCALABILITY_PR1.md  PR_SUMMARY_SCALABILITY_PR2.md  PR_TASK_DEFINITION.md  README.md  SOFTWARE_DESIGN_DOCUMENT.md  demo_acmetech_retrieval.py  demo_chromadb.py  demo_neo4j.py  load_acmetech_data.py  pr_comment_formatter.py  pyproject.toml  requirements.txt  run_api.py  test_agent_retrieval_workflow.py  test_real_embeddings.py  test_recommendation_crew.py  validate_system.py
.github/workflows/: ci.yml
config/: agent_config.yaml  arb_config.yaml  review_thresholds.yaml  scoring_weights.yaml
docs/: MARKDOWN_SUBMISSION_GUIDE.md
docs/pull_requests/: PR_SUMMARY_RELIABILITY_PR1.md  PR_SUMMARY_SCALABILITY_PR3.md
schemas/: agent-output-scalability.json  agent-output-security.json  architecture_submission_schema.json
src/: __init__.py
src/api/: __init__.py  (+4 more)
templates/: architecture_submission_template.md
tests/: test_agent_reviews.py  test_crew_builder_parsing.py  test_graph_queries.py  test_markdown_parser.py  test_neo4j_client.py  test_neo4j_tool.py  test_reliability_agent_output.py  test_scalability_agent_output.py  test_scalability_crew_builder_parsing.py  test_scalability_orchestrator.py  test_scalability_pipeline_integration.py  test_scalability_task_output.py  test_schema_validator.py  test_scoring_model.py  test_security_agent_output.py  test_security_orchestrator.py  test_task_output_parser.py  test_vector_store.py
(+99 files in other folders)
